fix: 🐛 try fix z-index issue with fb dialogue

--- a/src/app/components/atoms/facebook-messenger-integration/facebook-messenger-integration.component.scss
+++ b/src/app/components/atoms/facebook-messenger-integration/facebook-messenger-integration.component.scss
@@ -1,5 +1,5 @@
-.a-facebook-messenger-integration.fb-customerchat {
+.fb_dialog .fb-customerchat {
 	iframe {
-		z-index: 50;
+		z-index: 50 !important;
 	}
 }
